Copying mainMenu.html to the notifMenu.html but changging the newsfeed container to notifContainer PS: still bug on the image (the position doesn't fit)

--- a/css/mainMenuCss.css
+++ b/css/mainMenuCss.css
@@ -190,6 +190,15 @@
 
 }
 
+.notifFeed{
+	background-image: url(../img/MainElements/Notif-box.png);
+	background-size: 100% 80%;
+	height:544px;
+	background-repeat: no-repeat;
+	background-position: top;
+	background-color: transparent;
+	border: transparent;
 
+}
 
 
